--- a/facebook/src/components/Home/Home.css
+++ b/facebook/src/components/Home/Home.css
@@ -1,6 +1,6 @@
 #home-body-parent {
     display: flex;
-    border: 1px solid #000;
+    /* border: 1px solid #000; */
     background-color: aliceblue;
 }
 
@@ -67,7 +67,7 @@
     height: 7.5vh;
     width: 98%;
     margin: auto;
-    border-bottom: 1px solid #000;
+    border-bottom: 1px solid #e4e6eb;
     position: relative;
     display: flex;
     align-items: center;
