--- a/facebook/src/components/navbar/Navbar.css
+++ b/facebook/src/components/navbar/Navbar.css
@@ -8,7 +8,7 @@
 nav {
     height: 8vh;
     width: 100%;
-    border: 1px solid #000;
+    border: 1px solid #e4e6eb;
     display: flex;
 }
 
@@ -17,7 +17,7 @@ nav {
 #notification-profile-login-navbar-area {
     height: 8vh;
     width: 33.33%;
-    border: 1px solid #000;
+    /* border: 1px solid #000; */
     display: flex;
     align-items: center;
 }
@@ -39,7 +39,7 @@ nav {
 #navbar-search-area {
     height: 6vh;
     width: 40%;
-    border: 1px solid #000;
+    border: 1px solid #e4e6eb;
     border-radius: 50px;
     margin-left: 2%;
 }
