--- a/facebook/src/components/Home/Home.css
+++ b/facebook/src/components/Home/Home.css
@@ -16,6 +16,7 @@
     padding: 2% 2%;
     /* border: 1px solid #000; */
     display: flex;
+    color: #000;
 }
 
 .left-area-inner-category-circle {
